Added high school and fixed some grammar

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
             <ul>
                 <li>Implemented a feature rich 2D/3D OpenGL graphics engine with advanced shader effect support, layouting engine, math library, scripting and resource compilation</li>
                 <li>Cross-platform: iOS, OS X, Android, Linux; written in C++, extensible in Lua</li>
-                <li>Wrote various demo applications for the engine and two playable platformer games.</li>
+                <li>Wrote various demo applications for the engine and two playable platformer games</li>
             </ul>
             <h3>LivePapers <span class='nobold'>(<a href='http://porkholt.org/'>http://porkholt.org/</a>)</span></h3>
             <ul>
-                <li>Built an iOS jailbreak tweak that acts as a platform for live wallpaper plugins and a configuration app to go with it.</li>
-                <li>Used Porkholt Engine to create 4 configurable animated wallpapers with rich graphics and fluid animations.</li>
+                <li>Built an iOS jailbreak tweak that acts as a platform for live wallpaper plugins and a configuration app to go with it</li>
+                <li>Used Porkholt Engine to create 4 configurable animated wallpapers with rich graphics and fluid animations</li>
             </ul>
         </div>
 
@@ -44,18 +44,18 @@
         <div class="section">
             <h3>ARGO Tabs <span class='nobold'>(<a href='http://argotabs.herokuapp.com/'>http://argotabs.herokuapp.com/</a>)</span></h3>
             <ul>
-                <li>Built an user-oriented web application for recording and processing all the data necessary in organizing a World Schools debate tournament.</li>
-                <li>Responsive and UX-oriented design, full client-side stack: AngularJS, CoffeeScript, Jade, Stylus.</li>
+                <li>Built an user-oriented web application for recording and processing all the data necessary in organizing a World Schools debate tournament</li>
+                <li>Responsive and UX-oriented design, full client-side stack: AngularJS, CoffeeScript, Jade, Stylus</li>
             </ul>
             <h3>Website <span class='nobold'>(<a href='http://argodebate.ro/'>http://argodebate.ro/</a>)</span></h3>
             <ul>
-                <li>Implemented static and CMS-based websites for ARGO and its events.</li>
+                <li>Implemented static and CMS-based websites for ARGO and its events</li>
             </ul>
             <h3>Debate Trainer &amp; Debater</h3>
             <ul>
-                <li>Delivering weekly trainings to a group of 10 novice debaters.</li>
-                <li>Coached teams of debaters as part of their preparation for competitions.</li>
-                <li>Debated in the WS format for 3 years with notable results at competitions. Currently debating in the BP format.</li>
+                <li>Delivering weekly trainings to a group of 10 novice debaters</li>
+                <li>Coached teams of debaters as part of their preparation for competitions</li>
+                <li>Debated in the WS format for 3 years with notable results at competitions. Currently debating in the BP format</li>
             </ul>
         </div>
 
@@ -66,14 +66,22 @@
             <div>Oct 2013 - Present</div>
         </div>
         <div class="section">
-            <ul><li>Bachelors in Computer Science</li></ul>
+            <ul><li>Bachelor in Computer Science</li></ul>
+        </div>
+        <div class="columns entry">
+            <div>Ploiești, Romania</div>
+            <div>"Mihai Viteazul" National College</div>
+            <div>Sept 2009 - June 2013</div>
+        </div>
+        <div class="section">
+            <ul><li>High school class of Mathematics and CS</li><ul>
         </div>
 
         <h2>Technical Experience - Other Significant Projects</h2>
         <div class="section">
             <ul>
                 <li><strong>MultiCleaner</strong> - iOS jailbreak tweak that allows for cosmetic and functional customizations of the multitasking bar</li>
-                <li><strong>UDPWii</strong> - contribution to Dolphin (open source Wii emulator) that allows the emulator to be controlled with an iOS app.</li>
+                <li><strong>UDPWii</strong> - contribution to Dolphin (open source Wii emulator) that allows the emulator to be controlled with an iOS app</li>
             </ul>
         </div>
 
