Update HTML so it validates better. CSS as well.

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
           <div>March 2013 - Present</div>
         </div>
         <div class="content">
-          <h3>LearnForward (<a href="http://learnfwd.com/">http://learnfwd.com/</a>)</h3>
+          <h3>LearnForward (<a href="http://learnfwd.com/" target="_blank">http://learnfwd.com/</a>)</h3>
           <ul>
             <li>Meteor, JavaScript, responsive design, cloud infrastructure.</li>
             <li>Developed a grunt.js runner for generating HTML5 content for the platform. Now in the process of being refactored into a standalone, open source CLI tool: https://github.com/tvararu/lfa</li>
             <li>Architected and developed (full-stack) an online platform for HTML5 textbooks, enabling realtime cross-device Google Docs style collaboration on quizzes, interactive blackboard, more.</li>
           </ul>
           
-          <h3>George Enescu Festival (<a href="http://festivalenescu.ro/">http://festivalenescu.ro/</a>)</h3>
+          <h3>George Enescu Festival (<a href="http://festivalenescu.ro/" target="_blank">http://festivalenescu.ro/</a>)</h3>
           <ul>
             <li>Implemented this year’s festival website facelift using modern technologies and practices.</li>
             <li>Responsive design, Heroku and AWS infrastructure. Ruby on Rails, SCSS, wrote the entire backend and frontend using the RefineryCMS framework.</li>
@@ -61,7 +61,7 @@
         </div>
         <div class="content">
           <ul>
-            <li>Collaborated with copywriters and art executives to produce the promotional website for Creativity Blueprints 5 (<a href="http://creativityblueprints.ro/">http://creativityblueprints.ro/</a>), a free advertising school for students.</li>
+            <li>Collaborated with copywriters and art executives to produce the promotional website for Creativity Blueprints 5 (<a href="http://creativityblueprints.ro/" target="_blank">http://creativityblueprints.ro/</a>), a free advertising school for students.</li>
             <li>Developed static HTML websites for advertising-oriented organisation Advice.</li>
           </ul>
         </div>
@@ -87,7 +87,7 @@
         <div class="content">
           <ul>
             <li><strong>Modern Online Gradebook</strong> (2011), won first prize in the ITFest 2011 national competition.  Apache+Mysql+PHP stack, Ajax, Windows Phone 7 styling.</li>
-            <li><strong>The Last Question</strong> (2013) <a href="http://readfwd-tlq.herokuapp.com">http://readfwd-tlq.herokuapp.com</a>, weekend project, interactive presentation of Isaac Asimov’s short story of the same name. Jade, Stylus, jmpress.js.</li>
+            <li><strong>The Last Question</strong> (2013) <a href="http://readfwd-tlq.herokuapp.com" target="_blank">http://readfwd-tlq.herokuapp.com</a>, weekend project, interactive presentation of Isaac Asimov’s short story of the same name. Jade, Stylus, jmpress.js.</li>
           </ul>
         </div>
       </section>
@@ -117,9 +117,7 @@
       <section>
         <h2>Hobbies and Interests</h2>
         <div class="content">
-          <ul>
-            <p>Convincing people to learn to code, lurking Hacker News, hacking robots with Lego Mindstorms. I practice electric guitar, street dancing and beatboxing.</p>
-          </ul>
+          <p>Convincing people to learn to code, lurking Hacker News, hacking robots with Lego Mindstorms. I practice electric guitar, street dancing and beatboxing.</p>
         </div>
       </section>
     </article>
