Update the content

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
           <h3>LearnForward (<a href="http://learnfwd.com/" target="_blank">http://learnfwd.com/</a>)</h3>
           <ul>
             <li>Meteor, JavaScript, responsive design, cloud infrastructure.</li>
-            <li>Developed a grunt.js runner for generating HTML5 content for the platform. Now in the process of being refactored into a standalone, open source CLI tool: https://github.com/tvararu/lfa</li>
-            <li>Architected and developed (full-stack) an online platform for HTML5 textbooks, enabling realtime cross-device Google Docs style collaboration on quizzes, interactive blackboard, more.</li>
+            <li>Developed a grunt.js runner for generating HTML5 content for the platform. Now in the process of being refactored into a standalone, open source CLI tool(<a href="https://github.com/tvararu/lfa" target="_blank">https://github.com/tvararu/lfa</a>)</li>
           </ul>
           
           <h3>George Enescu Festival (<a href="http://festivalenescu.ro/" target="_blank">http://festivalenescu.ro/</a>)</h3>
@@ -48,7 +47,7 @@
           <h3>Other responsibilities and accomplishments</h3>
           <ul>
             <li>Coordinated, taught and code reviewed two junior HTML developers.</li>
-            <li>Implemented static websites for product websites, set up internal company coding pattern library, contributed to iOS and Android book apps (frameworks: Corona and Titanium).</li>
+            <li>Implemented static websites for product presentations, contributed to iOS and Android book apps (Corona framework).</li>
           </ul>
         </div>
         
