--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="content">
           <ul>
             <li><strong>Modern Online Gradebook</strong> (2011), won first prize in the ITFest 2011 national competition.  Apache+Mysql+PHP stack, Ajax, Windows Phone 7 styling.</li>
-            <li><strong>The Last Question</strong> (2013) <a href="http://readfwd-tlq.herokuapp.com" target="_blank">http://readfwd-tlq.herokuapp.com</a>, weekend project, interactive presentation of Isaac Asimov’s short story of the same name. Jade, Stylus, jmpress.js.</li>
+            <li><strong>The Last Question</strong> (2013) (<a href="http://readfwd-tlq.herokuapp.com" target="_blank">http://readfwd-tlq.herokuapp.com</a>), weekend project, interactive presentation of Isaac Asimov’s short story of the same name. Jade, Stylus, jmpress.js.</li>
           </ul>
         </div>
       </section>
