--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div><strong>University of Bucharest</strong></div>
           <div>2015 - Present</div>
           <ul>
-            <li>Master in Distributed System</li>
+            <li>Master in Distributed Systems</li>
           </ul>
         </div>
 
@@ -111,7 +111,7 @@
         <h2>Languages and Technologies</h2>
 
         <ul>
-          <li>C++, Java, Ruby, Python, SQL, JavaScript, HTML5, CSS3</li>
+          <li>C++, Java, Ruby, Python, JavaScript, HTML5, CSS3, SQL</li>
           <li>Git, CodeIgniter, Ruby on Rails, Django, Android, AngularJS</li>
           <li>Grunt.js, Stylus</li>
           <li>PostgreSQL, MySQL, SQLite3</li>
