--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
           <li>Optimize queries for faster responses.</li>
           <li>Build APIs for internal usage.</li>
           <li>Write web crawlers for gathering data.</li>
+          <li>Create management commands for processing data.</li>
         </ul>
 
         <br>
@@ -112,7 +113,7 @@
 
         <ul>
           <li>C++, Java, Ruby, Python, JavaScript, HTML5, CSS3, SQL</li>
-          <li>Git, CodeIgniter, Ruby on Rails, Django, Android, AngularJS</li>
+          <li>Git, CodeIgniter, Ruby on Rails, Django, Android, AngularJS, Wordpress</li>
           <li>Grunt.js, Stylus</li>
           <li>PostgreSQL, MySQL, SQLite3</li>
           <li>Romanian, English</li>
