--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <li>Build APIs for internal usage.</li>
           <li>Write web crawlers for gathering data.</li>
           <li>Create management commands for processing data.</li>
+          <li>Basic CRUD actions web pages.</li>
         </ul>
 
         <br>
@@ -102,7 +103,7 @@
             <li><strong>Photoshop</strong> - Slicing, Implementing web design.</li>
             <li><strong>Twitter clone</strong> - Twitter clone implemented in Ruby on Rails.</li>
             <li><strong>RSlider</strong> - a small and simple JavaScript carousel which works with different picture widths.</li>
-            <li><strong>Workout</strong> - basic app for tracking gym progress. (Android & AngularJS)</li>
+            <li><strong>Workout</strong> - basic app for tracking gym progress. (Android &amp; AngularJS with Rails API as backend)</li>
             <li><strong>Basic UNIX admin tasks</strong> - Install, setup of UNIX based systems, maintenance, etc.</li>
           </ul>
         </div>
