--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           </div>
 
           <div>
-            <span>+40 (728) 04 67 58</span><br>
+            <span>+40 (728) 04 67 58</span><br/>
             <a href='mailto:bogdan.boamfa@gmail.com'>bogdan.boamfa@gmail.com</a>
           </div>
         </div>
@@ -32,34 +32,71 @@
           <div>July 2015 - Present</div>
         </div>
 
+        <p class="section__subtitle">Project: </p>
+        <div>DontPayFull offers to consumers the opportunity to save money by accessing special offers from retailers.</div>
+
+        <p class="section__subtitle">Main responsabilities:</p>
         <ul>
-          <li>Implement different utilities for the admin panel.</li>
-          <li>Create tasks for processing data using Celery.</li>
-          <li>Optimize queries for faster responses.</li>
-          <li>Build APIs for internal usage.</li>
-          <li>Write web crawlers for gathering data.</li>
-          <li>Create management commands for processing data.</li>
-          <li>Basic CRUD actions web pages.</li>
+          <li>Implemented different utilities for the admin panel. Basic web pages with forms, filters, pagination, etc.</li>
+          <li>Created tasks for processing data using Celery and RabbitMQ.</li>
+          <li>Optimized SQL queries for faster responses. Cache information that doesn't need live updates.</li>
+          <li>Built APIs for internal usage.</li>
+          <li>Wrote web crawlers for gathering data.</li>
+          <li>Created management commands for processing database data. Provide CSV reports.</li>
+          <li>Basic CRUD web pages under Django framework.</li>
+          <li>Used the python's multiprocessing library to process data faster.</li>
         </ul>
 
-        <br>
+        <p class="section__subtitle">Technologies: <span>Python, Django, HTML, CSS, JavaScript, SQL, MySQL, Celery, RabbitMQ, Redis</span></p>
 
+        <p class="section__subtitle">Achievements:</p>
+        <ul>
+          <li>Learned about data processing and how important the optimizations are when dealing with large data.</li>
+          <li>Developed a way of thinking for using distributed systems and tasks to execute code faster and more efficient.</li>
+        </ul>
+
+        <br/><br/>
         <div class="columns entry">
           <div>Software Developer</div>
           <div><a href="https://www.backuprun.com" target="_blank">BackupRun</a></div>
           <div>August 2013 - July 2015</div>
         </div>
 
+        <p class="section__subtitle">Project: </p>
+        <div>
+          BackupRun is solution for setting up backup for servers. It uses R1Soft
+          software to create and manage your data. It automatically chooses
+          the best server node available on which to replicate your data depending on
+          your server's bandwich, distance, free disk space, cpu load, etc. <br/>
+          Based on the R1Soft API the application offers a user friendly and easy to use
+          way for anyone to create their own backups without having a vast knowledge in
+          networking or server administration.
+        </div>
+
+        <p class="section__subtitle">Main responsabilities:</p>
         <ul>
-          <li>Implemented the adaptive web design of the website.</li>
-          <li>Used Grunt.js to setup tasks for an easier development.</li>
-          <li>Improved the backend and implemented new features.</li>
+          <li>Implemented the websites responsive design. I used Grunt.js to setup tasks for an easier and faster development.</li>
+          <li>Improved SQL queries.</li>
+          <li>Added a payments module (adding paypal account, charging your account with credit).</li>
+          <li>Setup an account status based on their payments.</li>
+          <li>Email notifications for customers.</li>
+          <li>Built new APIs for communicating with server nodes.</li>
           <li>Integrated PayPal using Adaptive Payments API.</li>
-          <li>Implemented scripts for automatic payments using PayPal.</li>
-          <li>Setup new server nodes under UNIX systems.</li>
+          <li>Implemented scripts for automatic monthly payments using PayPal.</li>
+          <li>Setup new server nodes under UNIX systems. Install R1Soft server, setup networking, add the required scripts for the application to be able to run.</li>
           <li>Different basic administrator tasks like debugging, support, maintenance.</li>
           <li>Helped improving an invoicing CRM.</li>
           <li>Implemented scripts for automated generation of invoices.</li>
+        </ul>
+
+        <p class="section__subtitle">Technologies: <span>PHP, NGINX, HTML, CSS, JavaScript, SQL, MySQL, UNIX, Cronjobs</span></p>
+
+        <p class="section__subtitle">Achievements:</p>
+        <ul>
+          <li>Being my first job I learned a lot of new things about a vast area of technologies.</li>
+          <li>I learned to write much better modular code.</li>
+          <li>I improved my frontend knowledge and skills to an intermmediate-advanced level.</li>
+          <li>Basic networking and server administration.</li>
         </ul>
       </section>
 
@@ -94,17 +131,34 @@
         </div> -->
       </section>
 
+      <!-- <section>
+        <h2>Technical Experience</h2>
+        <div class="section info-ext">
+          <ul>
+            <li><strong>Scripting</strong> - PHP, Python, Ruby, Cronjobs.</li>
+            <li><strong>Photoshop</strong> - Slicing, Implementing web design.</li>
+            <li><strong>Basic UNIX admin tasks</strong> - Install, setup of UNIX based systems, maintenance, etc.</li>
+          </ul>
+        </div>
+      </section> -->
+
       <section>
-        <h2>Technical Experience - Other Significant Projects</h2>
+        <h2>Side projects</h2>
         <div class="section info-ext">
           <ul>
             <li>All my personal projects are on <a href="http://github.com/xbogdan" target="_blank">GitHub</a>.</li>
-            <li><strong>Scripting</strong> - PHP, Python, Ruby, Cronjobs.</li>
-            <li><strong>Photoshop</strong> - Slicing, Implementing web design.</li>
-            <li><strong>Twitter clone</strong> - Twitter clone implemented in Ruby on Rails.</li>
-            <li><strong>RSlider</strong> - a small and simple JavaScript carousel which works with different picture widths.</li>
-            <li><strong>Workout</strong> - basic app for tracking gym progress. (Android &amp; AngularJS with Rails API as backend)</li>
-            <li><strong>Basic UNIX admin tasks</strong> - Install, setup of UNIX based systems, maintenance, etc.</li>
+            <li><strong><a href="#">Twitter clone</a></strong> - Twitter clone implemented in Ruby on Rails based on Michael Hartl's tutorial.</li>
+            <li><strong><a href="https://github.com/xbogdan/RSlider">RSlider</a></strong> - a small and simple JavaScript carousel which works with different picture widths.</li>
+            <li>
+              <strong><a href="https://github.com/xbogdan/workout-android">Workout</a></strong> - basic app for tracking gym progress. (Android &amp; AngularJS with Rails API as backend)
+              <ul>
+                <li>Made it because I didn't found the right one for me and to self teach Android and AngularJS.</li>
+                <li>Track the number of sets, reps and weight for each exercise.</li>
+                <li>It has web crawler which populates the database with fitness exercises.</li>
+                <li>Synchronize the Android app with the main server (Ruby on Rails API).</li>
+                <li>API for accesing and saving data used by the both Android and web app.</li>
+              </ul>
+            </li>
           </ul>
         </div>
       </section>
@@ -113,11 +167,22 @@
         <h2>Languages and Technologies</h2>
 
         <ul>
-          <li>C++, Java, Ruby, Python, JavaScript, HTML5, CSS3, SQL</li>
-          <li>Git, CodeIgniter, Ruby on Rails, Django, Android, AngularJS, Wordpress</li>
-          <li>Grunt.js, Stylus</li>
+          <li>C++, Java, Ruby, Python, JavaScript, HTML5, CSS, SQL</li>
+          <li>Git, CodeIgniter, CakePHP3, Ruby on Rails, Django, Android, AngularJS, Wordpress</li>
+          <li>Grunt.js, Stylus, Capistrano, Celery</li>
           <li>PostgreSQL, MySQL, SQLite3</li>
+          <li>Photoshop, UNIX</li>
           <li>Romanian, English</li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Hobbies and interests</h2>
+
+        <ul>
+          <li>music, movies, video games, working out</li>
+          <li>meeting new people and making friends</li>
+          <li>learning about new technologies</li>
         </ul>
       </section>
     </article>
