--- a/index.html
+++ b/index.html
@@ -33,13 +33,15 @@
         </div>
 
         <ul>
-          <li>Implement different utilities for the admin panel.</li>
-          <li>Create tasks for processing data using Celery.</li>
-          <li>Optimize queries for faster responses.</li>
-          <li>Build APIs for internal usage.</li>
-          <li>Write web crawlers for gathering data.</li>
-          <li>Create management commands for processing data.</li>
-          <li>Basic CRUD actions web pages.</li>
+          <li>DontPayFull offers to consumers the opportunity to save money by accessing special offers from retailers.</li>
+          <li>Implemented different utilities for the admin panel. Basic web pages with forms, filters, pagination, etc.</li>
+          <li>Created tasks for processing data using Celery and RabbitMQ.</li>
+          <li>Optimized SQL queries for faster responses. Cache information that doesn't need live updates.</li>
+          <li>Built APIs for internal usage.</li>
+          <li>Wrote web crawlers for gathering data.</li>
+          <li>Created management commands for processing database data. Provide CSV reports.</li>
+          <li>Basic CRUD web pages under Django framework.</li>
+          <li>Used the python's multiprocessing library to process data faster.</li>
         </ul>
 
         <br>
@@ -51,12 +53,16 @@
         </div>
 
         <ul>
-          <li>Implemented the adaptive web design of the website.</li>
-          <li>Used Grunt.js to setup tasks for an easier development.</li>
-          <li>Improved the backend and implemented new features.</li>
+          <li>BackupRun is software solution for setting up backup for servers.</li>
+          <li>Implemented the websites responsive design. I used Grunt.js to setup tasks for an easier and faster development.</li>
+          <li>Improved SQL queries.</li>
+          <li>Added a payments module (adding paypal account, charging your account with credit).</li>
+          <li>Setup an account status based on their payments.</li>
+          <li>Email notifications for customers.</li>
+          <li>Built new APIs for communicating with server nodes.</li>
           <li>Integrated PayPal using Adaptive Payments API.</li>
-          <li>Implemented scripts for automatic payments using PayPal.</li>
-          <li>Setup new server nodes under UNIX systems.</li>
+          <li>Implemented scripts for automatic monthly payments using PayPal.</li>
+          <li>Setup new server nodes under UNIX systems. Install R1Soft server, setup networking, add the required scripts for the application to be able to run.</li>
           <li>Different basic administrator tasks like debugging, support, maintenance.</li>
           <li>Helped improving an invoicing CRM.</li>
           <li>Implemented scripts for automated generation of invoices.</li>
@@ -102,8 +108,8 @@
             <li><strong>Scripting</strong> - PHP, Python, Ruby, Cronjobs.</li>
             <li><strong>Photoshop</strong> - Slicing, Implementing web design.</li>
             <li><strong>Twitter clone</strong> - Twitter clone implemented in Ruby on Rails.</li>
-            <li><strong>RSlider</strong> - a small and simple JavaScript carousel which works with different picture widths.</li>
-            <li><strong>Workout</strong> - basic app for tracking gym progress. (Android &amp; AngularJS with Rails API as backend)</li>
+            <li><strong><a href="https://github.com/xbogdan/RSlider">RSlider</a></strong> - a small and simple JavaScript carousel which works with different picture widths.</li>
+            <li><strong><a href="https://github.com/xbogdan/workout-android">Workout</a></strong> - basic app for tracking gym progress. (Android &amp; AngularJS with Rails API as backend)</li>
             <li><strong>Basic UNIX admin tasks</strong> - Install, setup of UNIX based systems, maintenance, etc.</li>
           </ul>
         </div>
@@ -113,11 +119,22 @@
         <h2>Languages and Technologies</h2>
 
         <ul>
-          <li>C++, Java, Ruby, Python, JavaScript, HTML5, CSS3, SQL</li>
-          <li>Git, CodeIgniter, Ruby on Rails, Django, Android, AngularJS, Wordpress</li>
-          <li>Grunt.js, Stylus</li>
+          <li>C++, Java, Ruby, Python, JavaScript, HTML5, CSS, SQL</li>
+          <li>Git, CodeIgniter, CakePHP3, Ruby on Rails, Django, Android, AngularJS, Wordpress</li>
+          <li>Grunt.js, Stylus, Capistrano, Celery</li>
           <li>PostgreSQL, MySQL, SQLite3</li>
+          <li>Photoshop, UNIX</li>
           <li>Romanian, English</li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Hobbies and interests</h2>
+
+        <ul>
+          <li>music, movies, video games, working out</li>
+          <li>meeting new people and making friends</li>
+          <li>learning about new technologies</li>
         </ul>
       </section>
     </article>
