--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           BackupRun is solution for setting up backup for servers. It uses R1Soft
           software to create and manage your data. It automatically chooses
           the best server node available on which to replicate your data depending on
-          your server's bandwich, distance, free disk space, cpu load, etc. <br/>
+          your server's bandwidth, distance, free disk space, cpu load, etc. <br/>
           Based on the R1Soft API the application offers a user friendly and easy to use
           way for anyone to create their own backups without having a vast knowledge in
           networking or server administration.
