--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
           <div>
             <span>+40 (728) 04 67 58</span><br/>
-            <a href='mailto:bogdan.boamfa@gmail.com'>bogdan.boamfa@gmail.com</a>
+            <a href='mailto:bogdan.boamfa@gmail.com'>bogdan@boamfa.com</a>
           </div>
         </div>
       </section>
@@ -27,33 +27,54 @@
         <h2>Employment</h2>
 
         <div class="columns entry">
-          <div>Python/Django Developer</div>
-          <div><a href="https://www.dontpayfull.com" target="_blank">DontPayFull</a></div>
-          <div>July 2015 - Present</div>
+          <div>Lead Software Developer</div>
+          <div><a href="https://www.link-busters.com" target="_blank">Link-Busters</a></div>
+          <div>July 2016 - Present</div>
         </div>
 
-        <p class="section__subtitle">Project: </p>
-        <div>DontPayFull offers to consumers the opportunity to save money by accessing special offers from retailers.</div>
+        <br/>
+        <div><strong>Link-Busters</strong> is an antipiracy company which focuses on protecting digital content on the internet.</div>
 
-        <p class="section__subtitle">Main responsabilities:</p>
+        <br/>
         <ul>
-          <li>Implemented different utilities for the admin panel. Basic web pages with forms, filters, pagination, etc.</li>
-          <li>Created tasks for processing data using Celery and RabbitMQ.</li>
-          <li>Optimized SQL queries for faster responses. Cache information that doesn't need live updates.</li>
-          <li>Built APIs for internal usage.</li>
+          <li>Ensure the correct functionality of the system. Monitor servers and databases. Setup system infrastructure. Research cloud providers, calculate costs and port the infrastructure to <strong>Amazon Web Services</strong>.</li>
+          <li>Design, coordonate and develop new functionalities. Research and development, analyze data and extract pattern based solutions. Build tools for inside use. Build <strong>APIs</strong> for client and internal use with <strong>Django Rest Framework</strong>.</li>
+          <li>Collaborate with the stakeholders and the project owner to define project spefications. Participate in pipeline design for each module.</li>
+          <li>Work on optimising the backend performance. Rebuild each module, switch from C# and vanilla PHP to <strong>Python / Django</strong>. Arhitect new <strong>infrastructure</strong> and <strong>impelementation</strong> logic to improve horizontal <strong>scalability</strong> and perfomance. Remove the need of Microsoft SQL server license by switching to <strong>PostgreSQL</strong>.</li>
+          <li>Implement a scalable, fault tolerant, worker based, data processing solution with <strong>Celery</strong>, <strong>RabbitMQ</strong>, <strong>docker</strong> and <strong>AWS ECS</strong>.</li>
+          <li>Work on the <strong>client dashboard</strong> to improve performance. Implement ElasticSearch database store to speed up statistics generation inside the dashboard.</li>
+          
+          <li>Automate different human processes. Build an automatic product ingestion system which reads, parses and imports <strong>XML</strong>, <strong>CSV</strong>, <strong>Excel</strong> files received via FTP.</li>
+          <li>Connect business management tools (Pipedrive, Postmark, Grafana, Asana) to the main system. Implement data syncronization logic. Build <strong>KPI</strong> dashboards in <strong>Grafana</strong>.</li>
+          <li>Setup a continous deployment pipeline using <strong>AWS CodePipeline</strong></li>
+        </ul>
+
+        <div>Python, Django, JavaScript, React, ElasticSearch, PostgreSQL, Celery, RabbitMQ, Redis, AWS</div>
+
+        <br/><br/>
+
+        <div class="columns entry">
+          <div>Python/Django Developer</div>
+          <div><a href="https://www.dontpayfull.com" target="_blank">DontPayFull</a></div>
+          <div>July 2015 - July 2016</div>
+        </div>
+
+        <br/>
+        <div><strong>DontPayFull</strong> offers to consumers the opportunity to save money by accessing special offers from retailers.</div>
+        <br/>
+
+        <ul>
+          <li>Implement different utilities for the admin panel. Basic web pages with forms, filters, pagination, etc.</li>
+          <li>Create tasks for processing data using Celery and RabbitMQ.</li>
+          <li>Optimize SQL queries for faster responses. Cache information that doesn't need live updates.</li>
+          <li>Build APIs for internal usage.</li>
           <li>Wrote web crawlers for gathering data.</li>
-          <li>Created management commands for processing database data. Provide CSV reports.</li>
+          <li>Create management commands for processing database data. Provide CSV reports.</li>
           <li>Basic CRUD web pages under Django framework.</li>
-          <li>Used the python's multiprocessing library to process data faster.</li>
+          <li>Use the python's multiprocessing library to process data faster.</li>
         </ul>
 
-        <p class="section__subtitle">Technologies: <span>Python, Django, HTML, CSS, JavaScript, SQL, MySQL, Celery, RabbitMQ, Redis</span></p>
-
-        <p class="section__subtitle">Achievements:</p>
-        <ul>
-          <li>Learned about data processing and how important the optimizations are when dealing with large data.</li>
-          <li>Developed a way of thinking for using distributed systems and tasks to execute code faster and more efficient.</li>
-        </ul>
+        <div>Python, Django, HTML, CSS, JavaScript, MySQL, Celery, RabbitMQ, Redis</div>
 
         <br/><br/>
         <div class="columns entry">
@@ -62,18 +83,12 @@
           <div>August 2013 - July 2015</div>
         </div>
 
-        <p class="section__subtitle">Project: </p>
+        <br/>
         <div>
-          BackupRun is solution for setting up backup for servers. It uses R1Soft
-          software to create and manage your data. It automatically chooses
-          the best server node available on which to replicate your data depending on
-          your server's bandwidth, distance, free disk space, cpu load, etc. <br/>
-          Based on the R1Soft API the application offers a user friendly and easy to use
-          way for anyone to create their own backups without having a vast knowledge in
-          networking or server administration.
+          <strong>BackupRun</strong> is a server backup serivce which automates and simplifies the process of setting up a professional business backup solution.
         </div>
+        <br/>
 
-        <p class="section__subtitle">Main responsabilities:</p>
         <ul>
           <li>Implemented the websites responsive design. I used Grunt.js to setup tasks for an easier and faster development.</li>
           <li>Improved SQL queries.</li>
@@ -89,15 +104,7 @@
           <li>Implemented scripts for automated generation of invoices.</li>
         </ul>
 
-        <p class="section__subtitle">Technologies: <span>PHP, NGINX, HTML, CSS, JavaScript, SQL, MySQL, UNIX, Cronjobs</span></p>
-
-        <p class="section__subtitle">Achievements:</p>
-        <ul>
-          <li>Being my first job I learned a lot of new things about a vast area of technologies.</li>
-          <li>I learned to write much better modular code.</li>
-          <li>I improved my frontend knowledge and skills to an intermmediate-advanced level.</li>
-          <li>Basic networking and server administration.</li>
-        </ul>
+        <div>PHP, NGINX, HTML, CSS, JavaScript, SQL, UNIX</div>
       </section>
 
       <section>
@@ -106,7 +113,7 @@
         <div class="columns entry">
           <div>Bucharest, Romania</div>
           <div><strong>University of Bucharest</strong></div>
-          <div>2015 - Present</div>
+          <div>2015 - 2018</div>
           <ul>
             <li>Master in Distributed Systems</li>
           </ul>
@@ -120,27 +127,7 @@
             <li>Bachelor in Computer Science</li>
           </ul>
         </div>
-
-        <!-- <div class="columns entry">
-          <div>Bucharest, Romania</div>
-          <div><strong>"Gheorghe Lazar" National College of Bucharest</strong></div>
-          <div>2008 - 2012</div>
-          <ul>
-            <li>High school class of Mathematics and Informatics</li>
-          </ul>
-        </div> -->
       </section>
-
-      <!-- <section>
-        <h2>Technical Experience</h2>
-        <div class="section info-ext">
-          <ul>
-            <li><strong>Scripting</strong> - PHP, Python, Ruby, Cronjobs.</li>
-            <li><strong>Photoshop</strong> - Slicing, Implementing web design.</li>
-            <li><strong>Basic UNIX admin tasks</strong> - Install, setup of UNIX based systems, maintenance, etc.</li>
-          </ul>
-        </div>
-      </section> -->
 
       <section>
         <h2>Side projects</h2>
@@ -159,31 +146,19 @@
                 <li>API for accesing and saving data used by the both Android and web app.</li>
               </ul>
             </li>
+            <li><strong>Connected</strong> - a permission based phone agenda app.  Built in React Native and PHP.</li>
           </ul>
         </div>
       </section>
 
       <section>
         <h2>Languages and Technologies</h2>
-
-        <ul>
-          <li>C++, Java, Ruby, Python, JavaScript, HTML5, CSS, SQL</li>
-          <li>Git, CodeIgniter, CakePHP3, Ruby on Rails, Django, Android, AngularJS, Wordpress</li>
-          <li>Grunt.js, Stylus, Capistrano, Celery</li>
-          <li>PostgreSQL, MySQL, SQLite3</li>
-          <li>Photoshop, UNIX</li>
-          <li>Romanian, English</li>
-        </ul>
+        Most of the products that I build are with <strong>Python / Django</strong>. Other technologies I know and I've used in the past: JavaScript, React, React Native, PostgreSQL, Amazon Web Services. Versioning with git.
       </section>
 
       <section>
         <h2>Hobbies and interests</h2>
-
-        <ul>
-          <li>music, movies, video games, working out</li>
-          <li>meeting new people and making friends</li>
-          <li>learning about new technologies</li>
-        </ul>
+        <p>Into tech and techno. I enjoy travelling, meeting new people and keeping up to date with technology.</p>
       </section>
     </article>
 
