--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
         </div>
 
         <br/>
-        <div><strong>Link-Busters</strong> is an antipiracy company which focuses on protecting digital content on the internet.</div>
+        <div><strong>Link-Busters</strong> is an anti-piracy company which focuses on protecting digital content on the internet.</div>
 
         <br/>
         <ul>
           <li>Ensure the correct functionality of the system. Monitor servers and databases. Setup system infrastructure. Research cloud providers, calculate costs and port the infrastructure to <strong>Amazon Web Services</strong>.</li>
-          <li>Design, coordonate and develop new functionalities. Research and development, analyze data and extract pattern based solutions. Build tools for inside use. Build <strong>APIs</strong> for client and internal use with <strong>Django Rest Framework</strong>.</li>
-          <li>Collaborate with the stakeholders and the project owner to define project spefications. Participate in pipeline design for each module.</li>
-          <li>Work on optimising the backend performance. Rebuild each module, switch from C# and vanilla PHP to <strong>Python / Django</strong>. Arhitect new <strong>infrastructure</strong> and <strong>impelementation</strong> logic to improve horizontal <strong>scalability</strong> and perfomance. Remove the need of Microsoft SQL server license by switching to <strong>PostgreSQL</strong>.</li>
+          <li>Design, coordinate and develop new functionalities. Research and development, analyze data and extract pattern based solutions. Build tools for inside use. Build <strong>APIs</strong> for client and internal use with <strong>Django Rest Framework</strong>.</li>
+          <li>Collaborate with the stakeholders and the project owner to define project specifications. Participate in pipeline design for each module.</li>
+          <li>Work on optimizing the backend performance. Rebuild each module, switch from C# and vanilla PHP to <strong>Python / Django</strong>. Architect new <strong>infrastructure</strong> and <strong>implementation</strong> logic to improve horizontal <strong>scalability</strong> and performance. Remove the need of Microsoft SQL server license by switching to <strong>PostgreSQL</strong>.</li>
           <li>Implement a scalable, fault tolerant, worker based, data processing solution with <strong>Celery</strong>, <strong>RabbitMQ</strong>, <strong>docker</strong> and <strong>AWS ECS</strong>.</li>
           <li>Work on the <strong>client dashboard</strong> to improve performance. Implement ElasticSearch database store to speed up statistics generation inside the dashboard.</li>
           
           <li>Automate different human processes. Build an automatic product ingestion system which reads, parses and imports <strong>XML</strong>, <strong>CSV</strong>, <strong>Excel</strong> files received via FTP.</li>
-          <li>Connect business management tools (Pipedrive, Postmark, Grafana, Asana) to the main system. Implement data syncronization logic. Build <strong>KPI</strong> dashboards in <strong>Grafana</strong>.</li>
-          <li>Setup a continous deployment pipeline using <strong>AWS CodePipeline</strong></li>
+          <li>Connect business management tools (Pipedrive, Postmark, Grafana, Asana) to the main system. Implement data synchronization logic. Build <strong>KPI</strong> dashboards in <strong>Grafana</strong>.</li>
+          <li>Setup a continuous deployment pipeline using <strong>AWS CodePipeline</strong></li>
         </ul>
 
         <div>Python, Django, JavaScript, React, ElasticSearch, PostgreSQL, Celery, RabbitMQ, Redis, AWS</div>
@@ -85,7 +85,7 @@
 
         <br/>
         <div>
-          <strong>BackupRun</strong> is a server backup serivce which automates and simplifies the process of setting up a professional business backup solution.
+          <strong>BackupRun</strong> is a server backup service which automates and simplifies the process of setting up a professional business backup solution.
         </div>
         <br/>
 
@@ -143,7 +143,7 @@
                 <li>Track the number of sets, reps and weight for each exercise.</li>
                 <li>It has web crawler which populates the database with fitness exercises.</li>
                 <li>Synchronize the Android app with the main server (Ruby on Rails API).</li>
-                <li>API for accesing and saving data used by the both Android and web app.</li>
+                <li>API for accessing and saving data used by the both Android and web app.</li>
               </ul>
             </li>
             <li><strong>Connected</strong> - a permission based phone agenda app.  Built in React Native and PHP.</li>
@@ -158,7 +158,7 @@
 
       <section>
         <h2>Hobbies and interests</h2>
-        <p>Into tech and techno. I enjoy travelling, meeting new people and keeping up to date with technology.</p>
+        <p>Into tech and techno. I enjoy traveling, meeting new people and keeping up to date with technology.</p>
       </section>
     </article>
 
