--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <section>
         <h2>Education</h2>
 
-        <div class="columns entry">
+        <div class="columns">
           <div>Bucharest, Romania</div>
           <div><strong>University of Bucharest</strong></div>
           <div>2015 - 2018</div>
@@ -116,7 +116,7 @@
           </ul>
         </div>
 
-        <div class="columns entry">
+        <div class="columns">
           <div>Bucharest, Romania</div>
           <div><strong>University of Bucharest</strong></div>
           <div>2012 - 2015</div>
