--- a/index.html
+++ b/index.html
@@ -27,9 +27,73 @@
         <h2>Employment</h2>
 
         <div class="columns entry">
+          <div>CTO</div>
+          <div><a href="https://practiceinterviews.com" target="_blank">Pratice Interviews</a></div>
+          <div>October 2020 - Present</div>
+        </div>
+
+        <br/>
+        <div><strong>Practice Interviews</strong> is a platform that provides candidates with interview materials and coaching.</div>
+
+        <br/>
+        <ul>
+          <li>Build the software from the ground up.</li>
+          <li>Architect the system infrastructure in AWS, ensuring scalability and high availability.</li>
+          <li>Develop the frontend application with ReactJS, Redux, Sagas, etc.</li>
+          <li>Integrate Stripe payments processor.</li>
+          <li>Database design and modeling.</li>
+          <li>API backend development using Django Rest Framework.</li>
+          <li>Third party services integration for monitoring and tracking. (Sentry, CustomerIO, Grafana)</li>
+          <li>Coordonate the software development process, prioritize and plan future work.</li>
+        </ul>
+
+        <div>Python, Django, JavaScript, React, PostgreSQL, Amazon Web Services, Redis, Docker</div>
+
+        <!-- Reflex Help -->
+        <div class="columns entry">
+          <div>Software Engineer</div>
+          <div><a href="https://www.reflex.help" target="_blank">Reflex Help (contract work)</a></div>
+          <div>October 2020 - December 2021</div>
+        </div>
+
+        <br/>
+        <div><strong>Reflex Help</strong> is a startup looking to innovate the physical rehabilitation of patients, at home, through motion tracking sensors.</div>
+
+        <br/>
+        <ul>
+          <li>Build new API endpoints in ExpressJS.</li>
+          <li>Implement permission based acccess to the API.</li>
+          <li>Refactor and improve the overall code structure.</li>
+          <li>Database query optimizations.</li>
+        </ul>
+
+        <div>JavaScript, ExpressJS, MySQL, Azure</div>
+
+        <!-- Gemini Solutions -->
+        <div class="columns entry">
+          <div>Data Engineer</div>
+          <div><a href="https://www.thoughtworks.com/gemini-solutions-thoughtworks-romania" target="_blank">Gemini Solutions (currently Thoughtworks)</a></div>
+          <div>July 2020 - January 2021</div>
+        </div>
+
+        <br/>
+        <div><strong>Gemini Solutions</strong> is an outsourcing company with clients all over the world.</div>
+
+        <br/>
+        <ul>
+          <li>Work with data scientists to build and test geo spacial data visualization prototypes.</li>
+          <li>Developed a client / server application for running and displaying geo spacial data from Google Big Query.</li>
+          <li>Construct DAGs (Apache Airflow) for different data processing pipelines.</li>
+          <li>Build big data ingestions solutions.</li>
+        </ul>
+
+        <div>Python, Django, JavaScript, React, PostgreSQL, Apache Airflow, Google Cloud Platform, Docker</div>
+
+        <!-- Link Busters -->
+        <div class="columns entry">
           <div>Lead Software Developer</div>
           <div><a href="https://www.link-busters.com" target="_blank">Link-Busters</a></div>
-          <div>July 2016 - Present</div>
+          <div>July 2016 - June 2020</div>
         </div>
 
         <br/>
@@ -74,6 +138,7 @@
 
         <div>Python, Django, HTML, CSS, JavaScript, MySQL, Celery, RabbitMQ, Redis</div>
 
+        <!-- Backup Run -->
         <div class="columns entry">
           <div>Software Developer</div>
           <div><a href="https://www.backuprun.com" target="_blank">BackupRun</a></div>
@@ -150,7 +215,7 @@
 
       <section>
         <h2>Languages and Technologies</h2>
-        Most of the products that I build are with <strong>Python / Django</strong>. Other technologies I know and I've used in the past: JavaScript, React, React Native, PostgreSQL, Amazon Web Services. Versioning with git.
+        Most of the products that I build are with <strong>Python / Django</strong> and <strong>ReactJS</strong>. Other technologies I know and I've used in the past: React Native, ExpressJS PostgreSQL, Amazon Web Services, Redis. Versioning with git.
       </section>
 
       <section>
