--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="columns entry">
           <div>CTO</div>
           <div><a href="https://practiceinterviews.com" target="_blank">Pratice Interviews</a></div>
-          <div>October 2020 - Present</div>
+          <div>October 2020 - January 2022</div>
         </div>
 
         <br/>
@@ -39,15 +39,17 @@
         <ul>
           <li>Build the software from the ground up.</li>
           <li>Architect the system infrastructure in AWS, ensuring scalability and high availability.</li>
-          <li>Develop the frontend application with ReactJS, Redux, Sagas, etc.</li>
+          <li>Setup CI/CD pipelines using AWS Code Pipeline and Jenkins.</li>
+          <li>Build and deploy infrastructure as code with Terraform.</li>
+          <li>Develop frontend applications with ReactJS, Redux, Sagas, etc.</li>
           <li>Integrate Stripe payments processor.</li>
           <li>Database design and modeling.</li>
-          <li>API backend development using Django Rest Framework.</li>
-          <li>Third party services integration for monitoring and tracking. (Sentry, CustomerIO, Grafana)</li>
+          <li>REST API backend development using Django Rest Framework.</li>
+          <li>Third party services integration for monitoring, tracking and logging. (Sentry, ELK Stack, CustomerIO, Grafana)</li>
           <li>Coordonate the software development process, prioritize and plan future work.</li>
         </ul>
 
-        <div>Python, Django, JavaScript, React, PostgreSQL, Amazon Web Services, Redis, Docker</div>
+        <div>Python, Django, JavaScript, React, PostgreSQL, Amazon Web Services, Terraform, Redis, Docker, Celery, ElasticSearch</div>
 
         <!-- Reflex Help -->
         <div class="columns entry">
