--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         <br/>
         <ul>
           <li>Build the software from the ground up.</li>
+          <li>Create an appointment booking system with calendar integration.</li>
+          <li>Develop a course building tool.</li>
           <li>Architect the system infrastructure in AWS, ensuring scalability and high availability.</li>
           <li>Setup CI/CD pipelines using AWS Code Pipeline and Jenkins.</li>
           <li>Build and deploy infrastructure as code with Terraform.</li>
@@ -110,7 +112,7 @@
           <li>Implement a scalable, fault tolerant, worker based, data processing solution with <strong>Celery</strong>, <strong>RabbitMQ</strong>, <strong>docker</strong> and <strong>AWS ECS</strong>.</li>
           <li>Work on the <strong>client dashboard</strong> to improve performance. Implement ElasticSearch database store to speed up statistics generation inside the dashboard.</li>
           
-          <li>Automate different human processes. Build an automatic product ingestion system which reads, parses and imports <strong>XML</strong>, <strong>CSV</strong>, <strong>Excel</strong> files received via FTP.</li>
+          <li>Automate different human processes. Build an automatic product ingestion system that reads, parses and imports <strong>XML</strong>, <strong>CSV</strong>, <strong>Excel</strong> files received via FTP.</li>
           <li>Connect business management tools (Pipedrive, Postmark, Grafana, Asana) to the main system. Implement data synchronization logic. Build <strong>KPI</strong> dashboards in <strong>Grafana</strong>.</li>
           <li>Setup a continuous deployment pipeline using <strong>AWS CodePipeline</strong></li>
         </ul>
